src/FinancialForce Accounting/objects/codaCompany__c.object
<CustomObject>
    <customHelpPage>codahelpcompany</customHelpPage>
    <description>Stores the FinancialForce company details.</description>
    <fields>
        <fullName>AddressIsValid__c</fullName>
        <formula>NOT
( ISBLANK(ShortStreet__c) &amp;&amp;
  ISBLANK(City__c) &amp;&amp; 
  ISBLANK(StateProvince__c) &amp;&amp;
  ISBLANK(ZipPostCode__c) &amp;&amp;
  ISBLANK(Country__c) 
) &amp;&amp; 
( ShortStreet__c  =  ValidatedStreet__c ) &amp;&amp;
( City__c =  ValidatedCity__c ) &amp;&amp;
( StateProvince__c =  ValidatedStateProvince__c ) &amp;&amp;  
( ZipPostCode__c =  ValidatedZipPostalCode__c ) &amp;&amp;
( Country__c =  ValidatedCountry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllocatedOwnership__c</fullName>
        <label>Allocated Ownership</label>
        <summarizedField>CompanyOwnership__c.PercentageOwnership__c</summarizedField>
        <summaryForeignKey>CompanyOwnership__c.Company__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>codaBankAccount__c</referenceTo>
        <relationshipLabel>Companies (Bank Account)</relationshipLabel>
        <relationshipName>CompaniesBankAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CODABaseDate1__c</fullName>
        <description>The date on which terms will be calculated.</description>
        <label>Base Date 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End of Next Month</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                </value>
                <value>
                    <fullName>Start of Next Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CODABaseDate2__c</fullName>
        <description>The date on which terms will be calculated.</description>
        <label>Base Date 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End of Next Month</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                </value>
                <value>
                    <fullName>Start of Next Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CODABaseDate3__c</fullName>
        <description>The date on which terms will be calculated.</description>
        <label>Base Date 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End of Next Month</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                </value>
                <value>
                    <fullName>Start of Next Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CODADaysOffset1__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CODADaysOffset2__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CODADaysOffset3__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CODADescription1__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 1</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CODADescription2__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 2</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CODADescription3__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 3</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CODADiscount1__c</fullName>
        <description>The amount of discount to be applied</description>
        <label>Discount 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CODADiscount2__c</fullName>
        <description>The amount of discount to be applied</description>
        <label>Discount 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CODADiscount3__c</fullName>
        <description>The amount of discount to be applied</description>
        <label>Discount 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CashMatchingCurrencyMode__c</fullName>
        <label>Cash Matching Currency Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>The city</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <description>The contact email</description>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>The country</description>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerCurrencyWriteOffDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Currency Write-off Dimension 1</description>
        <label>Currency Write-off Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Companies (Currency Write-off Dimension 1)</relationshipLabel>
        <relationshipName>CompaniesCWOD1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerCurrencyWriteOffDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Currency Write-off Dimension 2</description>
        <label>Currency Write-off Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Companies (Currency Write-off Dimension 2)</relationshipLabel>
        <relationshipName>CompaniesCWOD2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerCurrencyWriteOffDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Currency Write-off Dimension 3</description>
        <label>Currency Write-off Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Companies (Currency Write-off Dimension 3)</relationshipLabel>
        <relationshipName>CompaniesCWOD3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerCurrencyWriteOff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Write-off</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Companies (Currency Write-off)</relationshipLabel>
        <relationshipName>CompaniesCurrWO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerSettlementDiscountDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Settlement Discount Dimension 1</description>
        <label>Settlement Discount Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Companies (Settlement Discount Dimension 1)</relationshipLabel>
        <relationshipName>CompaniesSettDiscDim1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerSettlementDiscountDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Settlement Discount Dimension 2</description>
        <label>Settlement Discount Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Companies (Settlement Discount Dimension 2)</relationshipLabel>
        <relationshipName>CompaniesSettDiscDim2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerSettlementDiscountDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Settlement Discount Dimension 3</description>
        <label>Settlement Discount Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Companies (Settlement Discount Dimension 3)</relationshipLabel>
        <relationshipName>CompaniesSettDiscDim3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerSettlementDiscount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement Discount</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Companies (Settlement Discount)</relationshipLabel>
        <relationshipName>CompaniesSettDisc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerWriteOffDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Write-Off Dimension1</description>
        <label>Write-off Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Companies (Write-off Dimension 1)</relationshipLabel>
        <relationshipName>CompaniesWriteOffDim1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerWriteOffDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Write-off Dimension 2</description>
        <label>Write-off Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Companies (Write-off Dimension 2)</relationshipLabel>
        <relationshipName>CompaniesWriteOffDim2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerWriteOffDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Write-off Dimension 3</description>
        <label>Write-off Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Companies (Write-off Dimension 3)</relationshipLabel>
        <relationshipName>CompaniesWriteOffDim3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerWriteOff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Write-off</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Companies (Write-off)</relationshipLabel>
        <relationshipName>CompaniesWriteOff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DisableRecurringInvoices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Opportunity Recurring Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECCountryCode__c</fullName>
        <label>Tax Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CY</fullName>
                </value>
                <value>
                    <fullName>CZ</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>EE</fullName>
                </value>
                <value>
                    <fullName>EL</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>HK</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>LU</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NZ</fullName>
                </value>
                <value>
                    <fullName>PL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EliminationCompany__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elimination Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnablePlaceOfSupplyRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Place of Supply Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExternalTaxCalculation__c</fullName>
        <label>External Tax Calculation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disabled</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Enabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>The fax</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IntercompanyAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LocalChartOfAccountsStructure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Chart of Accounts Structure</label>
        <referenceTo>ChartOfAccountsStructure__c</referenceTo>
        <relationshipLabel>Companies (Local Chart of Accounts Structure)</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LogoImage__c</fullName>
        <formula>IF(LEN(LogoURL__c)=0,&quot;&quot;, IMAGE(LogoURL__c,&quot;Company Logo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogoURL__c</fullName>
        <label>Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgWideEffectiveDate__c</fullName>
        <label>Org-Wide Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>The phone</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RetainedEarningsGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retained Earnings GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Companies (Retained Earnings GLA)</relationshipLabel>
        <relationshipName>DefaultRetainedEarningsGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesTaxCompanyCode__c</fullName>
        <description>The code identifies the company in external tax calculation and reporting systems</description>
        <inlineHelpText>The code identifies the company in external tax calculation and reporting systems</inlineHelpText>
        <label>External Tax Company Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortStreet__c</fullName>
        <label>Short Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StateProvince__c</fullName>
        <label>State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>The street</description>
        <label>Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SuspenseGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suspense GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Companies (Suspense GLA)</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Companies (Tax Code)</relationshipLabel>
        <relationshipName>CompaniesTaxCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxIdentificationNumber__c</fullName>
        <label>Tax Identification Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UseOrgWideExchangeRates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Org-Wide Exchange Rates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VATRegistrationNumber__c</fullName>
        <label>Tax Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_GST_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAT/GST Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidatedCity__c</fullName>
        <label>ValidatedCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidatedCountry__c</fullName>
        <label>Validated Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidatedStateProvince__c</fullName>
        <label>Validated State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidatedStreet__c</fullName>
        <label>ValidatedStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ValidatedZipPostalCode__c</fullName>
        <label>Validated Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>The website</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>YearEndMode__c</fullName>
        <label>Year End Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Accounting Code</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>GLA Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZipPostCode__c</fullName>
        <description>The zip or postal code</description>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Company</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <recordTypes>
        <fullName>COMB</fullName>
        <active>true</active>
        <description>Multi-tier Tax Companies. This option provides access to a corresponding Combined tax page layout.</description>
        <label>Combined</label>
    </recordTypes>
    <recordTypes>
        <fullName>GST</fullName>
        <active>true</active>
        <description>Goods and Service Tax Companies. This option provides access to a corresponding GST page layout.</description>
        <label>GST</label>
    </recordTypes>
    <recordTypes>
        <fullName>SUT</fullName>
        <active>true</active>
        <description>Sales and Use Tax Companies. This option provides access to a corresponding SUT page layout.</description>
        <label>SUT</label>
    </recordTypes>
    <recordTypes>
        <fullName>VAT</fullName>
        <active>true</active>
        <description>Value Added Tax Companies. This option provides access to a corresponding VAT page layout.</description>
        <label>VAT</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>